...
                .onTapGesture {
                    showingPlayer = true
                }
                .fullScreenCover(isPresented: $showingPlayer, content: {
                    if let videoUrl = URL(string: event.videoURL)  {
                        PlayerView(videoUrl: videoUrl)
                            .accessibilityIdentifier("playerView")
                    }
                })
                .padding([.leading, .trailing], 16)
                .padding(.bottom, 16)
                .listRowInsets(.init())
                .accessibilityIdentifier("videoCard")
        }
        .accessibilityIdentifier("eventsList")
        .listStyle(PlainListStyle())
    }
    
    var loadingView: some View {
...
